# foldgate

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CLAUDE.md  HANDOFF.md  HANDOFF_2026-07-12.md  HANDOFF_2026-07-12_session2.md  HANDOFF_2026-07-21.md  Makefile  PLAN.md  PREREGISTRATION.md  PROGRESS.md  README.md  REFERENCES.bib  RELATED_WORK.md  RESULTS.md  environment.yml  pixi.toml  pyproject.toml  requirements.txt
configs/: default.yaml
data/: DATASETS.md
docs/: DATA_CARD.md  EXECUTION_2026-07-12b.md  INTERNAL_REVIEW_2026-07-12.md  JCIM_OUTLINE.md  METHODS.md  MODEL_CARD.md  NEXT_STEPS_JOURNAL.md  REVISION_NUMBERS.md  REVISION_TRIAGE.md  REVISION_TRIAGE_R3.md  REVISION_TRIAGE_R4.md  SUBMISSION_GUIDE.md
experiments/: README.md  _bench_common.py  _common.py  b1_synth_impossibility.py  b2_synth_mondrian.py  b3_synth_weighted_vs_cond.py  b4_synth_certificate.py  b5_real_acs.py  b6_real_electricity.py  b7_synth_concept_drift.py  build_features.py  build_pose_features.py  d1_d2_figures.py  d1_extract_delivered.py  d1_floor.py  d1_single_frame.py  d2_certify.py  d2_feasibility_map.py  e10_foldbench.py  e11_baselines.py  e12_reliability_drift.py  e13_loto_validity.py  e14_disagreement_strata.py  e15_foldbench_transfer.py  e15b_foldbench_iptm_transfer.py  e16_selective_screening.py  e17_worst_subpop.py  e18_localized.py  e19_shift_decomp.py  e1_iid_validity.py  e20_screening_broad.py  e21_affinity_selective.py  e22_robust_certificates.py  e23_screening_honest.py  e24_screening_baseline.py  e25_temporal_permodel.py  e26_strata_and_binning.py  e27_pb_joint_label.py  e28_label_cost_curve.py  e29_proxy_stratifier.py  (+48 more)
notebooks/: quickstart.ipynb
paper/: README.md  build_pdf.py  foldgate_journal.tex  ledger.json  moml2026_foldgate.tex  moml2026_shortpaper.html  moml2026_shortpaper.md  moml2026_shortpaper.tex
results/: analysis_table.csv  break_money_numbers.json  certificate_cards.json  d1_floor.json  d1_frame_check.json  (+68 more)
(+1386 files in other folders)
